- More notes on JavaScript data types

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "Backticks",
         "Bytecode",
         "Chakra",
-        "IIFE"
+        "IIFE",
+        "typeof"
     ]
 }
